maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:75: error: not found: value NORD
		case 1 => {while (isDirectionFree(NORD)) {aramis()}; e = 0}
                                                  ^